# Server

./: CMakeLists.txt  CloseCommand.cpp  CloseCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  ConfigurationFileHandler.cpp  ConfigurationFileHandler.h  ExitCommand.cpp  ExitCommand.h  GameRoom.cpp  GameRoom.h  GamesList.cpp  GamesList.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp
exe/: Configuration
